...
        foregroundColor: Theme.of(context).colorScheme.onPrimary,
        elevation: 0,
        leading: Icon(Icons.density_medium, color: Theme.of(context).colorScheme.onPrimary),
        title: Row(
          children: [
            Text(
              'CSSAyP Móvil',
              style: TextStyle(fontSize: 18, fontFamily: 'Montserrat', fontWeight: FontWeight.w600),
            ),
          ],
        ),
        actions: [
          IconButton(
...
              ),
            ),

            const SizedBox(height: 24),

            Text(
              '¡Bienvenido!',
              textAlign: TextAlign.center,
              style: TextStyle(
                color: Color(0xFF4D4D4D),
                fontSize: 24,
                fontFamily: 'Montserrat',
                fontWeight: FontWeight.w700,
...
