...
      if (response.statusCode == 200) {
        return DatosComprobanteSuccessResponse.fromJson(response.statusCode, json.decode(response.body));
      } else {
        return DatosComprobanteGenericErrorResponse.fromJson(response.statusCode, json.decode(response.body));
      }
    } on SocketException catch (_) {
      return DatosComprobanteGenericErrorResponse(statusCode: 0, errorMessage: 'Error en la conexión con el servidor');
    } on TimeoutException catch (_) {
      return DatosComprobanteGenericErrorResponse(statusCode: 0, errorMessage: 'Error en la conexión con el servidor');
    } on FormatException catch (_) {
      return DatosComprobanteGenericErrorResponse(
        statusCode: 0,
        errorMessage: 'Error del servidor, intente nuevamente más tarde',
...
